# aaetfgyasasdasdqw

./: .gitignore  Better Planetside.spec  Dior Client.py  EVENT_OVERLAY_PERFORMANCE_PLAN.md  INSTALL-LINUX.md  OVERLAY_PERF_BASELINE_TEMPLATE.md  PHASE6_ROLLOUT_NOTES.md  README-RELEASE.md  README.md  TAURI_COMPARISON_CHECKLIST.md  ahorn_objectives.json  build-linux.sh  build-windows.bat  bump_version.py  census_worker.py  characters_qt.py  config.json  convert_icon.py  crash_log.txt  create-appimage.sh  crosshair_editor.py  dashboard_qt.py  dior_db.py  dior_utils.py  directive_test.json  discord_presence.py  error_log.txt  generate_release_config.py  generate_release_manifest.py  gitignore  installer_script.iss  launch.sh  launcher_qt.py  main.py  manifest.json  manifest.windows.json  overlay_config_qt.py  overlay_events.py  overlay_server.py  overlay_window.py  (+18 more)
overlay-next/: .gitignore  Cargo.toml  EXECUTION_PLAN.md  PHASE1_UI_PARITY_TRACKER.md  PORT_CHECKLIST.md  README.md  UI_PARITY_PLAYBOOK.md
overlay-next/src/: app.rs  audio.rs  census.rs  characters.rs  config.rs  control.rs  dior_db.rs  events.rs  main.rs  protocol.rs  state.rs  stats.rs  workers.rs
overlay-next/src/launcher/: characters_page.rs  crosshair.rs  dashboard.rs  events.rs  game_launcher.rs  identity.rs  killfeed.rs  killstreak.rs  mod.rs  obs.rs  settings_page.rs  stats.rs  theme.rs  twitch.rs  ui.rs  voice.rs
overlay-next/tauri-spike/: README.md
overlay-next/tauri-spike/frontend/: index.html  main.js  styles.css
overlay-next/tauri-spike/src-tauri/: Cargo.toml  tauri.conf.json
(+17 files in other folders)
