[package]
name = "better-planetside-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws", "json"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
dirs = "5"
eframe = { version = "0.28", default-features = true }
egui = "0.28"
futures-util = "0.3"
image = "0.25"
rodio = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
