[package]
name = "tauri-spike-overlay"
version = "0.1.0"
edition = "2021"
description = "Tauri spike for Better Planetside overlay parity tests"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting"] }

[features]
default = []
